# Cellular-Automata

./: .gitignore  CMakeLists.txt  GameOfLife.cpp  Grid.cpp  Grid.h  Makefile  Makefile_win  README.md  a.out  game_of_life  game_of_life0  main.cpp  todo.txt
include/: GameOfLife.h  Grid.h
src/: GameOfLife.cpp  Grid.cpp  main.cpp
